src/objects/Invoice__c.object
<CustomObject>
    <description>DAZN Invoice object. Invoices are bills that you send to customers.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CRM account that the invoice is associated to.</description>
        <inlineHelpText>The CRM account that the invoice is associated to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdjustmentAmount__c</fullName>
        <description>The currency amount of the adjustment applied to the invoice.</description>
        <inlineHelpText>The currency amount of the adjustment applied to the invoice.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Bucket__c</fullName>
        <description>Age Buckets for Aging Reports</description>
        <formula>IF(Balance2__c &lt;= 0, NULL,
IF(TODAY() - DueDate__c &lt;= 0, &quot;On Time&quot;,
IF(TODAY() - DueDate__c &lt;= 30, &quot;1-30&quot;,
IF(TODAY() - DueDate__c &lt;= 60, &quot;31-60&quot;,
IF(TODAY() - DueDate__c &lt;= 90, &quot;61-90&quot;, &quot;91-&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age Buckets for Aging Reports</inlineHelpText>
        <label>Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountWithoutTax__c</fullName>
        <description>The total of the invoice before any taxes are applied.</description>
        <inlineHelpText>The total of the invoice before any taxes are applied.</inlineHelpText>
        <label>Amount Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance2__c</fullName>
        <description>The balance due on the invoice after the value for the Amount field is applied.</description>
        <inlineHelpText>The balance due on the invoice after the value for the Amount field is applied.</inlineHelpText>
        <label>Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>DAZN Invoice Balance.  This field is deprecated.</description>
        <inlineHelpText>DAZN Invoice Balance.  This field is deprecated.</inlineHelpText>
        <label>Balance (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillToId__c</fullName>
        <description>zuora bill to contact id</description>
        <label>Bill To Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DAZN billing account that the invoice is for.</description>
        <inlineHelpText>The DAZN billing account that the invoice is for.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>CustomerAccount__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the invoice was created in the DAZN system.</description>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditBalanceAdjustmentAmount__c</fullName>
        <description>The currency amount of the adjustment applied to the customer&apos;s credit balance.</description>
        <label>Credit Balance Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAZNId__c</fullName>
        <description>The Invoice ID in the DAZN system.</description>
        <inlineHelpText>The Invoice ID in the DAZN system.</inlineHelpText>
        <label>Invoice ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAZN_Id__c</fullName>
        <description>The DAZN ID of the invoice.</description>
        <inlineHelpText>The DAZN ID of the invoice.</inlineHelpText>
        <label>DAZN Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Invoice Description.</description>
        <inlineHelpText>Invoice Description.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>The date by which the payment for this invoice is due.</description>
        <inlineHelpText>The date by which the payment for this invoice is due.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneratedDate__c</fullName>
        <label>Generated On Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generated_Date__c</fullName>
        <label>Generated On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <description>The generation date of the invoice.</description>
        <inlineHelpText>The generation date of the invoice.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <description>The amount of payments applied to the invoice.</description>
        <inlineHelpText>The amount of payments applied to the invoice.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <description>The payment term of the associated billing account.</description>
        <inlineHelpText>The payment term of the associated billing account.</inlineHelpText>
        <label>Payment Term</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <referenceTo>PaymentTerm__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <description>The date when the invoice was posted.</description>
        <inlineHelpText>The date when the invoice was posted.</inlineHelpText>
        <label>Posted On Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <description>The date when the invoice was posted.</description>
        <inlineHelpText>The date when the invoice was posted.</inlineHelpText>
        <label>Posted On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RefundedAmount__c</fullName>
        <description>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</description>
        <inlineHelpText>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</inlineHelpText>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SoldToId__c</fullName>
        <description>zuora sold to contact id</description>
        <label>Sold To Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the invoice in the system. This status is not the status of the payment of the invoice, just the status of the invoice itself.</description>
        <inlineHelpText>The status of the invoice in the system. This status is not the status of the payment of the invoice, just the status of the invoice itself.</inlineHelpText>
        <label>Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <description>The date you want the invoice generated on.</description>
        <inlineHelpText>The date you want the invoice generated on.</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <description>The total amount of the taxes applied to the invoice.</description>
        <inlineHelpText>The total amount of the taxes applied to the invoice.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxExemptAmount__c</fullName>
        <description>The total amount of the invoice that is exempt from taxation.</description>
        <inlineHelpText>The total amount of the invoice that is exempt from taxation.</inlineHelpText>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <description>The amount of the invoice.</description>
        <inlineHelpText>The amount of the invoice.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the DAZN system.</description>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>